# cucco-server

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: deploy-pages.yml
clients/: index.html
clients/common/: ws_client.py
clients/mock_ai/: mock_ai.py  policies.py
clients/play/: README.md  index.html  style.css
clients/play/src/: cardInfo.js  gameState.js  main.js
clients/stub/: stub_client.py
clients/web/: README.md  index.html  style.css
clients/web-common/: persistence.js  utils.js
clients/web/src/: cards.js  connection.js  deriveTurn.js  main.js  persistence.js  state.js  utils.js
docs/: ai-advanced-policies.md  ai-client-guide.md  human-client-guide.md  requirements.md  roadmap-ideas.md  security-notes.md  server-operations.md  web-client-operations.md
docs/protocol/: decisions.md  design.md
docs/rules/: cambio_dice-saloon.txt  cuccu_sealion.txt  final_rules.md  flavor_text.md  notes.md  play_summary_granpere.md  rank_table_seminar.csv  strategy_hints.md
src/cucco/ai/: __init__.py  bot.py  context.py  policies.py
src/cucco/domain/: cards.py  config.py  deal.py  deck.py  errors.py  events.py  game.py  pot.py
src/cucco/evaluation/: runner.py
src/cucco/persistence/: action_log.py  db.py  results_store.py  stats.py
src/cucco/protocol/: actions.py  envelope.py  errors.py  wire_events.py
src/cucco/server/: admin.py  admin_console.html  app.py  bots.py  dispatch.py  registry.py  (+4 more)
tests/integration/: test_admin_e2e.py  test_counting_evaluation.py  test_mock_ai_e2e.py  test_real_websocket.py  test_shutdown.py
(+57 files in other folders)
