[project]
name = "cucco"
version = "0.8.1"
description = "Cucco (Gran Pere / Cambio ruleset) network battle server"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Kobashi Kazuhide" },
]
requires-python = ">=3.11"
dependencies = [
    "websockets>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cucco"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
